# wrapped_mono

./: .gitignore  Cargo.toml  LICENSE  README.md  Test.cs  build.rs
examples/basic_test/: Cargo.toml
examples/basic_test/src/: main.rs
examples/interop/: custom_struct_interop.rs
src/: array.rs  assembly.rs  bindgen.rs  class.rs  corelib_binds.rs  delegate.rs  dimensions.rs  domain.rs  exception.rs  gc.rs  image.rs  interop.rs  invokable.rs  invokable_arg.rs  jit.rs  lib.rs  metadata.rs  method.rs  mstring.rs  object.rs  profiler.rs  reflection_type.rs  runtime.rs  tupleutilis.rs
src/binds/: mod.rs
src/cbinds/: binds.h
src/macros/: Cargo.toml
src/macros/src/: arg_rep.rs  fn_rep.rs  lib.rs  method_invoke.rs  tok_vec.rs
src/testing/: array.rs  benchmarks.rs  class.rs  delegate.rs  exception.rs  gc.rs  internal_call.rs  method.rs  mod.rs  object.rs  pinvoke.rs  profiler.rs  reflection.rs
src/wrapped_mono_macros/: Cargo.toml  README.md
src/wrapped_mono_macros/src/: arg_rep.rs  fn_rep.rs  lib.rs  tok_vec.rs
test/: Jit.cs  Pinvoke.cs  Test.cs
