[package]
name = "wrapped_mono_macros"
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Macros for wrapped_mono. Useless without it."
repository = "https://github.com/FractalFir/wrapped_mono"
keywords = ["DotNET","mono","CSharp","macros","derive"]
authors = ["FractalFir <fractalfirdev@gmail.com>"]
categories = ["macros"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = "1.0"
quote = "1.0"
[lib]
proc-macro = true
[features]
dump_macro_results = []
